--- a/prueba/index.html
+++ b/prueba/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
     <nav class="navbar">
       <div class="calculadora">
         <h1>Calculadora</h1>
@@ -21,6 +22,7 @@
       </div>
        
     </nav>
+    <div class="content">
    
     <div id="calculator">
         <div class="cero"id="display">0</div>
@@ -51,8 +53,7 @@
         <div class="row">
           <button  class="button1" id="equals" onclick="calculate()">=</div>
         </div>
-      <div>
-      
+  </div>     
 </body>
 </html>
 
