--- a/prueba/index.html
+++ b/prueba/index.html
@@ -27,32 +27,34 @@
     <div id="calculator">
         <div class="cero"id="display">0</div>
         <div class="row">
-          <button class="button" onclick="press(7);">7</button>
-          <button class="button"onclick="press(8);">8</button>
-          <button class="button"onclick="press(9);">9</button>
-          <button class="operator" onclick="setOP('/');">÷</button>
+          <button  class="button" onclick="press(7);">7</button>
+          <button  class="button"onclick="press(8);">8</button>
+          <button  class="button"onclick="press(9);">9</button>
+          <button  class="operator" onclick="setOP('/');">÷</button>
         </div>
         <div class="row">
           <button  class="button"onclick="press(4);">4</button>
           <button  class="button"onclick="press(5);">5</button>
           <button  class="button"onclick="press(6);">6</button>
-          <button class="operator" onclick="setOP('*');">×</button>
+          <button  class="operator" onclick="setOP('*');">×</button>
         </div>
         <div class="row">
           <button  class="button"onclick="press(1);">1</button>
           <button  class="button"onclick="press(2);">2</button>
           <button  class="button"onclick="press(3);">3</button>
-          <button class="operator" onclick="setOP('-');">−</button>
+          <button  class="operator" onclick="setOP('-');">−</button>
         </div>
         <div class="row">
           <button  class="button"onclick="clr();">C</button>
           <button  class="button"onclick="press(0);">0</button>
           <button  class="button"onclick="press('.');">.</button>
-          <button class="operator" onclick="setOP('+');">+</button>
+          <button  class="operator" onclick="setOP('+');">+</button>
         </div>
         <div class="row">
           <button  class="button1" id="equals" onclick="calculate()">=</div>
         </div>
+
+        <script src="script.js"></script>
   </div>     
 </body>
 </html>
